--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ urllib3 = "==1.25.7"
 wrapt = "==1.11.2"
 yarl = "==1.4.2"
 python-telegram-bot = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
