--- a/Pipfile
+++ b/Pipfile
@@ -6,26 +6,10 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-aiohttp = "==3.6.2"
-astroid = "==2.3.3"
-async-timeout = "==3.0.1"
-attrs = "==19.3.0"
-certifi = "==2019.11.28"
-chardet = "==3.0.4"
-idna = "==2.8"
-isort = "==4.3.21"
-lazy-object-proxy = "==1.4.3"
-mccabe = "==0.6.1"
-multidict = "==4.7.4"
-pylint = "==2.4.4"
-pytelegrambotapi = "==3.6.7"
-requests = "==2.22.0"
-six = "==1.14.0"
-urllib3 = "==1.25.7"
-wrapt = "==1.11.2"
-yarl = "==1.4.2"
 python-telegram-bot = "*"
+pylint = "*"
 python-dotenv = "*"
+requests = "*"
 
 [requires]
 python_version = "3.8"
